<resources>

    <!-- Home -->
    <string name="app_name">No Time Wasted</string>
    <string name="home_welcome">Welcome</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="signup">Sign up?</string>
    <!-- Settings -->
    <string name="settingsheading">User Settings</string>
    <string name="full_names">Full names</string>
    <string name="email_address">Email address</string>
    <string name="max">Max</string>
    <string name="min">Min</string>
    <string name="daily_goals">Daily Goals</string>
    <string name="notifications">Notifications on/off</string>
    <string name="save">Save</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <!-- Signup -->
    <string name="signup_heading">Sign Up</string>
    <string name="hint_min_goal">Minimum Daily Goal (hours)</string>
    <string name="hint_max_goal">Maximum Daily Goal (hours)</string>
    <string name="button_sign_up">Sign Up</string>
    <string name="have_an_account">Already have an account?</string>
    <!-- Categories -->
    <string name="add_category">Add Category</string>
    <string name="category_heading">Categories</string>
    <string name="category_name_hint">Category name</string>
    <string name="category_description_hint">Category description</string>
    <string name="select_color_button">Select category colour</string>
    <string name="cancel_button">Cancel</string>
    <string name="colour">Colour: </string>
    <!-- Tasks -->
    <string name="add_task">Add Task</string>
    <string name="tasks_heading">Tasks</string>
    <string name="task_name_hint">Task name</string>
    <string name="task_description_hint">Task description</string>
    <string name="task_start_time_hint">Task start time</string>
    <string name="task_end_time_hint">Task end time</string>
    <string name="select_date">Select date</string>
    <!-- Settings -->
    <string name="settings_heading">Settings</string>
    <string name="settings_notifications">Allow notifications?</string>
    <string name="settings_notifications_explained">When checked you will receive notifications from NoTimeWasted about your upcoming tasks as well as reminders to log tasks</string>
    <string name="settings_explained">Click on the fields below to edit your information. Remember to save it as well using the button at the bottom of the page.</string>
</resources>